# AllChat

./: README.md
AllChatClient/: AllChatClient.pro  CMakeLists.txt  CommonEnum.h  addfriends.cpp  addfriends.h  applydelegate.cpp  friendsdelegate.cpp  friendsdelegate.h  friendsmodel.cpp  friendsmodel.h  imageviewer.cpp  imageviewer.h  login.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagedelegate.cpp  messagedelegate.h  messagelistview.h  messagemodel.cpp  messagemodel.h  regist.h  resource.qrc  strangerdelegate.cpp  strangerdelegate.h
AllChatClient/Core/: avatarmanager.cpp  avatarmanager.h  chathistorymanager.cpp  chathistorymanager.h  configmanager.cpp  configmanager.h  contactmanager.cpp  contactmanager.h  control.cpp  control.h  currentuser.cpp  currentuser.h  datatransfer.cpp  datatransfer.h  httpmanager.cpp  httpmanager.h
AllChatClient/Delegate/: applydelegate.cpp  applydelegate.h  chatdelegate.cpp  chatdelegate.h  friendsdelegate.cpp  friendsdelegate.h  messagedelegate.cpp  messagedelegate.h  strangerdelegate.cpp  strangerdelegate.h
AllChatClient/Model/: Packet.cpp  Packet.h  chatmodel.cpp  chatmodel.h  currentuser.cpp  currentuser.h  friendsmodel.cpp  friendsmodel.h  group.cpp  group.h  message.cpp  message.h  messagemodel.cpp  messagemodel.h  messagepacket.cpp  messagepacket.h  strangermodel.cpp  strangermodel.h  user.cpp  user.h
AllChatClient/Utils/: CustomTypes.h  commonutil.cpp  commonutil.h  datatransfer.cpp
AllChatClient/View/: UserDetailView.cpp  UserDetailView.h  UserDetailView.ui  addfriends.cpp  addfriends.h  addfriends.ui  chatlistview.cpp  chatlistview.h  creategroup.cpp  creategroup.h  customtitlebar.cpp  customtitlebar.h  imageviewer.cpp  imageviewer.h  login.cpp  login.h  login.ui  messagelistview.cpp  messagelistview.h  messagesenderview.cpp  messagesenderview.h  onlinestatelabel.cpp  onlinestatelabel.h  regist.cpp  regist.h  regist.ui  searchbar.cpp  searchbar.h  updateavatar.cpp  updateavatar.h  updateavatar.ui
AllChatClient/View/Components/: avatarlabel.cpp  avatarlabel.h  confirmbox.cpp  confirmbox.h  customtitlebar.cpp  customtitlebar.h  dialogtitlebar.cpp  dialogtitlebar.h  onlinestatelabel.cpp  onlinestatelabel.h  searchbar.cpp  searchbar.h  searchresultlist.cpp  searchresultlist.h  sidebar.cpp  sidebar.h  tipsbox.cpp  tipsbox.h
AllChatClient/View/Login/: hollow_button.cpp  hollow_button.h  input_box.cpp  input_box.h  login_button.cpp  login_button.h  login_form.cpp  login_form.h  registration_form.cpp  registration_form.h  responsive_form.cpp  responsive_form.h  scroll_bar.cpp  scroll_bar.h  transparent_transition_interface.cpp  transparent_transition_interface.h
AllChatServer/: AllChatServer.pro  database.cpp  database.h  main.cpp  server.cpp  server.h
AllChatServer/Core/: database.cpp  database.h  datatransfer.cpp  datatransfer.h  friendapplycache.cpp  friendapplycache.h  httpservermanager.cpp  httpservermanager.h  redisclient.cpp  redisclient.h
